--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="notesBody">
     
       <!-- Custom element directive to display the notes -->
-      <note-template ng-hide="notes.notesHidden"></note-template>
+      <note-template></note-template>
       
       <!-- Custom element directive to display the create form -->
       <create-template ng-hide="notes.createFormHidden"></create-template>
