--- a/note-template.html
+++ b/note-template.html
@@ -1,5 +1,5 @@
 <!-- Custom element directive to display all stored notes -->
-<div data-ng-repeat="note in notes.notes">
+<div data-ng-repeat="note in notes.notes" name="noteContainer">
 
   <div class="noteContainer">
 
