--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     
     <!-- AngularJS 1.2.x -->
-    <script data-require="angular.js@1.2.x" src="http://code.angularjs.org/1.2.15/angular.js" data-semver="1.2.15"></script>
+    <script src="js/angularjs.js"></script>
 
     <!-- Custom JavaScript -->
     <script src="js/app.js"></script>
